Cleanup: exclude webpack config from sonarcloud coverage

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=symblai_symbl-web-sdk
 sonar.organization=symblai
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.coverage.exclusions=webpack.config.js
