--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint": "^7.32.0",
     "jest": "^29.2.2",
     "jest-fetch-mock": "^3.0.3",
+    "jest-environment-jsdom": "^29.2.2",
     "jsdom": "^16.6.0",
     "standardized-audio-context-mock": "^9.2.0",
     "ts-jest": "^29.0.3",
