--- a/.github/workflows/upload-to-cdn.yaml
+++ b/.github/workflows/upload-to-cdn.yaml
@@ -29,7 +29,8 @@ jobs:
       - id: 'googleauth'
         uses: 'google-github-actions/auth@v0'
         with:
-          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+          credentials_json: '${{ secrets.GCP_PROD_CREDENTIALS }}'
+      - run: gcloud auth list
 
       - id: upload_minified_file
         uses: google-github-actions/upload-cloud-storage@v0
